--- a/bebei-ias-co/ias-co-web/src/main/resources/application.yml
+++ b/bebei-ias-co/ias-co-web/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     suffix: ".html"
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/hbgt?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
     type: com.alibaba.druid.pool.DruidDataSource
     data-username: root
     data-password: root
